<resources>
    <string name="app_name">MTG Familiar</string>
    <string name="name_search_hint">Search Names</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_both">Both</string>
    <string name="dialog_life">Life</string>
    <string name="dialog_thanks">Thanks!</string>
    <string name="dialog_thanks_anyway">Thanks Anyway!</string>
    <string name="dialog_enjoy">Enjoy!</string>
    <string name="update_notification">Checking for database updates</string>
    <string name="update_updating_set">Adding %s</string>
    <string name="update_updating_rules">Updating comprehensive rules</string>
    <string name="update_added">Added</string>
    <string name="update_added_rules">new comprehensive rules</string>
    <string name="update_added_mtr">new Magic Tournament Rules</string>
    <string name="update_added_ipg">new Infraction Procedure Guide</string>
    <string name="update_added_jar">new Judging at Regular</string>
    <string name="error">Error</string>
    <string name="error_database">A database error occurred. If it persists, try clearing the app data from the Android settings menu.</string>
    <string name="error_no_email_client">It does not appear that you have an active email client installed. Please configure an email application.</string>
    <string name="toast_no_card">No card found with that name.</string>
    <string name="not_deleted">not deleted</string>
    <string name="no_network">Network is not available</string>
    <string name="main_pages">PAGES</string>
    <string name="main_extras">EXTRAS</string>
    <string name="main_card_search">Card Search</string>
    <string name="main_life_counter">Life Counter</string>
    <string name="main_mana_pool">Mana Pool</string>
    <string name="main_dice">Dice</string>
    <string name="main_trade">Trade Cards</string>
    <string name="main_wishlist">Wishlist</string>
    <string name="main_timer">Round Timer</string>
    <string name="main_rules">Rules</string>
    <string name="main_judges_corner">Judge\'s Corner</string>
    <string name="main_mojhosto">MoJhoSto Basic</string>
    <string name="main_force_update_title">Force Update</string>
    <string name="main_settings_title">Settings</string>
    <string name="main_donate_title">Donate</string>
    <string name="main_donate_dialog_title">Donate to the Developers</string>
    <string name="main_profile">Profile</string>
<string name="main_donate_text">
For a premium MTG app like this, how much would you pay? $1,000? $10,000?&lt;br&gt;&lt;br&gt;
Well, if you\'re reading this, you already know we\'re giving it away for free!&lt;br&gt;&lt;br&gt;
Coding is hard work though, and we developers appreciate the extra dollar here or there.&lt;br&gt;&lt;br&gt;
We\'ve got a drafting habit to fuel, OK?&lt;br&gt;&lt;br&gt;
You can click the button below to donate via PayPal. $1 is cool. $5 is cooler. You get the drift.&lt;br&gt;&lt;br&gt;
So, how generous are you feeling today?</string>
    <string name="main_whats_new_title">What\'s New</string>
    <string name="main_whats_new_in_title">What\'s New in Version</string>
<string name="main_whats_new_text">
- New Material design&lt;br&gt;&lt;br&gt;
- Added JAR document&lt;br&gt;&lt;br&gt;
- Added banned, restricted, and legal set lists to rules&lt;br&gt;&lt;br&gt;
- Copy rules to the clipboard by long pressing&lt;br&gt;&lt;br&gt;
- Added preference to select app language&lt;br&gt;&lt;br&gt;
- Sort wishlists by set&lt;br&gt;&lt;br&gt;
- Remove trade entries by long pressing&lt;br&gt;&lt;br&gt;
- Bugfixes, as always
</string>
    <string name="main_tts_warning_title">Text-to-Speech</string>
<string name="main_tts_warning_text">This application has text-to-speech capability for some of its features, but you don\'t seem to have it installed.
If you want to install it, use the "Install Text-to-Speech" link in the settings menu.</string>
    <string name="main_export_data_title">Save Data to SD</string>
    <string name="main_export_success">Successfully saved data to</string>
    <string name="main_export_fail">Failed to save data to SD card</string>
    <string name="main_import_data_title">Load Data from SD</string>
    <string name="main_import_success">Load succeeded</string>
    <string name="main_import_fail">Load failed. Please put MTGFamiliarBackup.zip in the root of your SD card</string>
    <string name="main_about">About</string>
    <string name="search_clear_fields">Clear Fields</string>
    <string name="search_save_defaults">Save Defaults</string>
    <string name="search_load_defaults">Load Defaults</string>
    <string name="card_view_image">Card Image</string>
    <string name="card_view_price">Card Price</string>
    <string name="card_view_change_set">Change Set</string>
    <string name="card_view_legality">Legality</string>
    <string name="card_view_rulings">Card Rulings</string>
    <string name="card_view_wishlist">Wishlist</string>
    <string name="card_view_price_dialog_low">Low:</string>
    <string name="card_view_price_dialog_medium">Average:</string>
    <string name="card_view_price_dialog_high">High:</string>
    <string name="card_view_price_dialog_foil">Foil Average:</string>
    <string name="life_counter_announce_life">Announce Life Totals</string>
    <string name="life_counter_change_default_gathering">Edit Gatherings</string>
    <string name="life_counter_set_gathering">Load a Gathering</string>
    <string name="life_counter_change_display">Change Display Mode</string>
    <string name="life_counter_remove_player">Remove a Player</string>
    <string name="life_counter_add_player">Add a Player</string>
    <string name="gathering_save">Save Gathering</string>
    <string name="gathering_load">Load Gathering</string>
    <string name="gathering_delete">Delete Gathering</string>
    <string name="gathering_remove_player">Remove a Player</string>
    <string name="gathering_add_player">Add a Player</string>
    <string name="pref_screen_general">General Settings</string>
    <string name="pref_screen_search">Search &amp; Results</string>
    <string name="pref_screen_counter">Life Counter</string>
    <string name="pref_screen_timer">Round Timer</string>
    <string name="pref_screen_trade_wishlist">Trade &amp; Wishlist</string>
    <string name="pref_cat_default_fragment">Default Page</string>
    <string name="pref_default_fragment_mode_title">Default Page</string>
    <string name="pref_default_fragment_mode_summary">The first thing you see when you open the app</string>
    <string name="pref_cat_updates">Database Updates</string>
    <string name="pref_auto_updates_title">Automatic Updates</string>
    <string name="pref_auto_updates_summary">Check for new sets and bannings when the app opens</string>
    <string name="pref_update_frequency_title">Update Frequency</string>
    <string name="pref_update_frequency_summary">Number of days to go between checking for new sets and bannings</string>
    <string name="pref_cat_card_view">Card View</string>
    <string name="pref_show_art_title">Always Show Art</string>
    <string name="pref_show_art_summary">When viewing a card, load official card image instead of rules text</string>
    <string name="pref_card_language_title">Card image language</string>
    <string name="pref_card_language_summary">Choose the language used to retrieve the card image</string>
    <string name="pref_cat_life_counter">Life Counter</string>
    <string name="pref_wake_lock_title">Wake Lock</string>
    <string name="pref_wake_lock_summary">Force the life counter screen to never go to sleep</string>
    <string name="pref_display_mode_title">Display Mode</string>
    <string name="pref_display_mode_summary">Choose how to display the Life Counter</string>
    <string name="pref_cat_timer">Round Timer</string>
    <string name="pref_ringtone_title">Timer Ringtone</string>
    <string name="pref_ringtone_summary">Select a notification ringtone to play when the round timer ends</string>
    <string name="pref_fifteen_minutes_title">15-Minute Warning</string>
    <string name="pref_ten_minutes_title">10-Minute Warning</string>
    <string name="pref_five_minutes_title">5-Minute Warning</string>
    <string name="pref_cat_trade_window">Trade Window</string>
    <string name="pref_trade_price_title">Price Setting</string>
    <string name="pref_trade_price_summary">TCGplayer price to use when trading cards</string>
    <string name="pref_cat_result_list">Result List</string>
    <string name="pref_consolidate_title">Consolidate Results</string>
    <string name="pref_consolidate_summary">Only show the most recent printing of a card</string>
    <string name="pref_show_set_title">Show Set</string>
    <string name="pref_show_mana_title">Show Mana Cost</string>
    <string name="pref_show_type_title">Show Type/Subtype</string>
    <string name="pref_show_ability_title">Show Rules Text</string>
    <string name="pref_show_pt_title">Show Power/Toughness</string>
    <string name="pref_cat_wishlist">Wishlist</string>
    <string name="pref_wishlist_details_title">Show Details</string>
    <string name="pref_wishlist_details_summary">Display full card details in the wishlist</string>
    <string name="pref_wishlist_totals_title">Show Total Price</string>
    <string name="pref_wishlist_totals_summary">Display total price summary in the wishlist</string>
    <string name="pref_wishlist_prices_title">Show Card Prices</string>
    <string name="pref_wishlist_prices_summary">Display each card price in the wishlist</string>
    <string name="pref_cat_widget">Widget</string>
    <string name="pref_widget_mode_title">Widget Buttons</string>
    <string name="pref_widget_mode_summary">The buttons to display in the widget</string>
</resources>