<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011 Adam Feinstein and April King.

This file is part of MTG Familiar.

MTG Familiar is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTG Familiar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with MTG Familiar.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/add_player"
        android:showAsAction="ifRoom"
        android:title="@string/life_counter_add_player"
        android:icon="@drawable/ic_action_add"/>
    <item
        android:id="@+id/remove_player"
        android:showAsAction="ifRoom"
        android:title="@string/life_counter_remove_player"
        android:icon="@drawable/ic_action_remove"/>
    <item
        android:id="@+id/display_mode"
        android:title="@string/life_counter_change_display"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_view_as_grid"/>
    <item
        android:id="@+id/set_gathering"
        android:showAsAction="ifRoom"
        android:title="@string/life_counter_set_gathering"
        android:icon="@drawable/ic_action_group"/>
    <item
        android:id="@+id/change_gathering" 
        android:showAsAction="ifRoom"
        android:title="@string/life_counter_change_default_gathering"
        android:icon="@drawable/ic_action_add_group"/>
    <item
        android:id="@+id/announce_life"
        android:showAsAction="ifRoom"
        android:title="@string/life_counter_announce_life"
        android:icon="@drawable/ic_action_volume_on"/>

</menu>
