<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="4dp"
              android:paddingBottom="4dp">

    <CheckBox
        android:id="@+id/timer_pref_fifteen"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_fifteen_minutes_title"
        android:checked="false"
        style="@style/text.medium"/>

    <CheckBox
        android:id="@+id/timer_pref_ten"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_ten_minutes_title"
        style="@style/text.medium"/>

    <CheckBox
        android:id="@+id/timer_pref_five"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/pref_five_minutes_title"
        style="@style/text.medium"/>

</LinearLayout>