<?xml version="1.0" encoding="UTF-8"?><!--
     Copyright 2011 Adam Feinstein This file is part of MTG Familiar. MTG 
	Familiar is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or (at your option) any later 
	version. MTG Familiar is distributed in the hope that it will be useful, 
	but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
	or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for 
	more details. You should have received a copy of the GNU General Public License 
	along with MTG Familiar. If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal">

        <TextView
            style="@style/text.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_price_dialog_low" />

        <TextView
            android:id="@+id/low"
            style="@style/text.medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:gravity="right"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal">

        <TextView
            style="@style/text.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_price_dialog_medium" />

        <TextView
            android:id="@+id/med"
            style="@style/text.medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dip"
            android:gravity="right"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal">

        <TextView
            style="@style/text.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_price_dialog_high" />

        <TextView
            android:id="@+id/high"
            style="@style/text.medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:gravity="right"
            android:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/foil_label"
            style="@style/text.medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_price_dialog_foil" />

        <TextView
            android:id="@+id/foil"
            style="@style/text.medium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dip"
            android:gravity="right"
            android:text="@string/app_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/pricelink"
        style="@style/text.medium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name" />

</LinearLayout>